# HugoAura-PLS

./: .gitignore  HugoAura-PLS.spec  README.md  pyproject.toml
.github/workflows/: build.yml
config/: default.json
config/mtls/: README.md  Seewo_Core_Hardcoded_mTLS_Cert.pem
scripts/: build.bat  mv.bat
src/: __init__.py  appLauncher.py  lifecycle.py  main.py  webSocketLauncher.py
src/config/: loader.py  manager.py
src/infrastructure/: argResolver.py  certLoader.py  logger.py  winSvc.py
src/middleware/: auth.py  wsSender.py
src/mitm/: addon.py  manager.py  mqttPacketResolver.py  msgConstructor.py  ruleLoader.py
src/mitm/handlers/: publishPacketHandler.py
src/mitm/rules/client/security/: __base__.py  uploadFreezeInfo.py
src/mitm/rules/server/inf/: __base__.py
src/mitm/rules/server/security/: __base__.py  dispatchBrowseAuditMode.py  dispatchBrowseAuditStrategy.py
src/routes/: basic.py  config.py  error.py  router.py
src/services/: basic.py  config.py
src/typeDefs/: config.py  mqtt.py  websocket.py
src/typeDefs/utils/: registryMgr.py
src/typeDefs/websocketRoutes/: basic.py  config.py
src/utils/: authTokenMgr.py  crypto.py  registryMgr.py
