[project]
name = "hugoaura-proxylayerservices"
version = "0.0.1-alpha"
description = "Proxy Layer Services for HugoAura"
authors = [
    {name = "Minoricew"}
]
license = {text = "GNU GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mitmproxy (>=10.0.0,<12.0.0)",
    "mitmproxy_rs (>=0.11.5)",
    "websockets (>=15.0.1,<16.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyinstaller (>=6.13.0,<7.0.0)",
    "deepdiff (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
